<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/global"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/content_description_global"
        android:icon="@drawable/ic_hub"
        android:title="@string/global"/>

    <item
        android:id="@+id/account"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/content_desc_account"
        android:icon="@drawable/ic_account"
        android:title="@string/account" />

    <item
        android:id="@+id/more"
        app:showAsAction="never"
        android:contentDescription="@string/content_desc_settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/about"
        app:showAsAction="never"
        android:contentDescription="@string/content_desc_settings"
        android:title="@string/about" />

</menu>